--- a/hedcuter/code/CMakeLists.txt
+++ b/hedcuter/code/CMakeLists.txt
@@ -36,7 +36,7 @@ include_directories(
 set(APP_NAME hedcuter)
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})
 
-set(HEDCUT_SRC hedcut.cpp   main.cpp    wcvt.cpp    wcvt_gpu.cpp
+set(HEDCUT_SRC hedcut.cpp   main.cpp    wcvt.cpp
 )
 
 add_executable(${APP_NAME} ${HEDCUT_SRC})
